[project]
name = "assert-linked-list"
version = "0.1.0"
description = ""
authors = [
    { name = "Chris Pryer", email = "cnpryer@gmail.com" }
]
dependencies = []
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.0.287",
    "pytest>=7.4.1",
]

[tool.hatch.metadata]
allow-direct-references = true
